--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Intellipaat EC2 Server</title>
+        <title>My EC2 Server</title>
         <style>
             * {
 box-sizing: border-box;
@@ -65,22 +65,20 @@ figure {
 </style>
     </head>
     <body>
-        <img src="https://raw.githubusercontent.com/Kodeedudey/AWS-DevOps-Project/master/1.png" alt="logo" width="100" height="42">
-        <h1 align="center">Welcome to Intellipaat</h1>
+        <img src="https://devopsimage.s3.amazonaws.com/1.png" alt="logo" width="300" height="75">
+        <h1 align="center">Welcome to XYZ Corporation Ltd.</h1>
         <header>
-                <h2>Intellipaat Server Example</h2>
+                <h2>Building Simple Solutions</h2>
               </header>
               <section>
                 <nav>
                   <ul>
-                    <li><a href="https://intellipaat.com/tutorial/hadoop-tutorial/">Hadoop</a></li>
-                    <li><a href="https://intellipaat.com/tutorial/amazon-web-services-aws-tutorial/">Amazon Web Services</a></li>
-                    <li><a href="https://intellipaat.com/tutorial/data-science-tutorial/">Data Science</a></li>
+                    <li><a href="https://www.google.com/">For more details try Google</a></li>
                   </ul>
                 </nav>
                 <article>
                   <figure>
-                    <img src="https://raw.githubusercontent.com/Kodeedudey/AWS-DevOps-Project/master/aws.gif" width="1800" height="250">
+                    <img src="https://devopsimage.s3.amazonaws.com/aws.gif" width="1800" height="250">
                     <div align=center><p>Amazon Web Services is the world’s biggest cloud provider which is owned by Amazon. They provide a set of on-demand services to the customers via the internet or “The Cloud”. Also, you get a pay-as-you-go option where you need to only pay for what you use.</p>
                       </div>
                   </figure>
